右下图表任务save一下